Implementation of registrdigitalizace.cz catalog
* configuration of bibliographic catalogs in proarc.cfg
* possibility to customize junit tests with local resources
* add JAXWS 2.2 and JAXB 2.2 support to run cz.registrdigitalizace.soapclient on JDK 1.6